Remove API key from Info.plist and use Secrets.xcconfig
- Replace hardcoded API key in Info.plist with  variable
- Update .gitignore to exclude wh/Secrets.xcconfig from version control
- API key now properly sourced from Secrets.xcconfig build configuration
- Maintains security by keeping sensitive data out of version control

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ iOSInjectionProject/
 
 # API Keys and Secrets
 Info.plist
-Secrets.xcconfig
+wh/Secrets.xcconfig
 *.xcconfig
 
 # Environment files
